crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_revert2.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_revert2), functions::parse_stmt,\n           \"revert something\")"

---
Node(
  kind: Revert(
    error: Some(Node(
      kind: Name("something"),
      span: Span(
        start: 7,
        end: 16,
      ),
    )),
  ),
  span: Span(
    start: 0,
    end: 16,
  ),
)
