crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_semicolons.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_semicolons), functions::parse_stmt,\n           \"if a { b; c; d; for x in y {}; }\")"

---
Node(
  kind: If(
    test: Node(
      kind: Name("a"),
      span: Span(
        start: 3,
        end: 4,
      ),
    ),
    body: [
      Node(
        kind: Expr(
          value: Node(
            kind: Name("b"),
            span: Span(
              start: 7,
              end: 8,
            ),
          ),
        ),
        span: Span(
          start: 7,
          end: 8,
        ),
      ),
      Node(
        kind: Expr(
          value: Node(
            kind: Name("c"),
            span: Span(
              start: 10,
              end: 11,
            ),
          ),
        ),
        span: Span(
          start: 10,
          end: 11,
        ),
      ),
      Node(
        kind: Expr(
          value: Node(
            kind: Name("d"),
            span: Span(
              start: 13,
              end: 14,
            ),
          ),
        ),
        span: Span(
          start: 13,
          end: 14,
        ),
      ),
      Node(
        kind: For(
          target: Node(
            kind: "x",
            span: Span(
              start: 20,
              end: 21,
            ),
          ),
          iter: Node(
            kind: Name("y"),
            span: Span(
              start: 25,
              end: 26,
            ),
          ),
          body: [],
        ),
        span: Span(
          start: 16,
          end: 29,
        ),
      ),
    ],
    or_else: [],
  ),
  span: Span(
    start: 0,
    end: 29,
  ),
)
