crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_var_decl_name.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_var_decl_name), functions::parse_stmt,\n    \"let foo: u256 = 1\")"

---
Node(
  kind: VarDecl(
    target: Node(
      kind: Name("foo"),
      span: Span(
        start: 4,
        end: 7,
      ),
    ),
    typ: Node(
      kind: Base(
        base: "u256",
      ),
      span: Span(
        start: 9,
        end: 13,
      ),
    ),
    value: Some(Node(
      kind: Num("1"),
      span: Span(
        start: 16,
        end: 17,
      ),
    )),
  ),
  span: Span(
    start: 0,
    end: 17,
  ),
)
