crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_var_decl_tuple.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_var_decl_tuple), functions::parse_stmt,\n    \"let (foo, bar): (u256, u256) = (10, 10)\")"

---
Node(
  kind: VarDecl(
    target: Node(
      kind: Tuple([
        Node(
          kind: Name("foo"),
          span: Span(
            start: 5,
            end: 8,
          ),
        ),
        Node(
          kind: Name("bar"),
          span: Span(
            start: 10,
            end: 13,
          ),
        ),
      ]),
      span: Span(
        start: 4,
        end: 14,
      ),
    ),
    typ: Node(
      kind: Tuple(
        items: [
          Node(
            kind: Base(
              base: "u256",
            ),
            span: Span(
              start: 17,
              end: 21,
            ),
          ),
          Node(
            kind: Base(
              base: "u256",
            ),
            span: Span(
              start: 23,
              end: 27,
            ),
          ),
        ],
      ),
      span: Span(
        start: 16,
        end: 28,
      ),
    ),
    value: Some(Node(
      kind: Tuple(
        elts: [
          Node(
            kind: Num("10"),
            span: Span(
              start: 32,
              end: 34,
            ),
          ),
          Node(
            kind: Num("10"),
            span: Span(
              start: 36,
              end: 38,
            ),
          ),
        ],
      ),
      span: Span(
        start: 31,
        end: 39,
      ),
    )),
  ),
  span: Span(
    start: 0,
    end: 39,
  ),
)
