crates/parser/tests/cases/snapshots/cases__parse_ast__struct_def.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(struct_def), try_parse_module,\n    r#\"struct S {\n  x: address\n  pub y: u8\n  z: u8\n  pub a: Map<u8, foo>\n\n  pub fn foo(self) -> u8 {\n    return self.z + self.y\n  }\n  unsafe fn bar() {}\n}\"#)"

---
Node(
  kind: Module(
    body: [
      Struct(Node(
        kind: Struct(
          name: Node(
            kind: "S",
            span: Span(
              start: 7,
              end: 8,
            ),
          ),
          fields: [
            Node(
              kind: Field(
                is_pub: false,
                is_const: false,
                attributes: [
                  Node(
                    kind: "indexed",
                    span: Span(
                      start: 13,
                      end: 21,
                    ),
                  ),
                ],
                name: Node(
                  kind: "x",
                  span: Span(
                    start: 24,
                    end: 25,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "address",
                  ),
                  span: Span(
                    start: 27,
                    end: 34,
                  ),
                ),
                value: None,
              ),
              span: Span(
                start: 24,
                end: 34,
              ),
            ),
            Node(
              kind: Field(
                is_pub: true,
                is_const: false,
                attributes: [],
                name: Node(
                  kind: "y",
                  span: Span(
                    start: 41,
                    end: 42,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "u8",
                  ),
                  span: Span(
                    start: 44,
                    end: 46,
                  ),
                ),
                value: None,
              ),
              span: Span(
                start: 37,
                end: 46,
              ),
            ),
            Node(
              kind: Field(
                is_pub: false,
                is_const: false,
                attributes: [],
                name: Node(
                  kind: "z",
                  span: Span(
                    start: 49,
                    end: 50,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "u8",
                  ),
                  span: Span(
                    start: 52,
                    end: 54,
                  ),
                ),
                value: None,
              ),
              span: Span(
                start: 49,
                end: 54,
              ),
            ),
            Node(
              kind: Field(
                is_pub: true,
                is_const: false,
                attributes: [],
                name: Node(
                  kind: "a",
                  span: Span(
                    start: 61,
                    end: 62,
                  ),
                ),
                typ: Node(
                  kind: Generic(
                    base: Node(
                      kind: "Map",
                      span: Span(
                        start: 53,
                        end: 56,
                      ),
                    ),
                    args: Node(
                      kind: [
                        TypeDesc(Node(
                          kind: Base(
                            base: "u8",
                          ),
                          span: Span(
                            start: 57,
                            end: 59,
                          ),
                        )),
                        TypeDesc(Node(
                          kind: Base(
                            base: "foo",
                          ),
                          span: Span(
                            start: 61,
                            end: 64,
                          ),
                        )),
                      ],
                      span: Span(
                        start: 56,
                        end: 65,
                      ),
                    ),
                  ),
                  span: Span(
                    start: 53,
                    end: 65,
                  ),
                ),
                value: None,
              ),
              span: Span(
                start: 46,
                end: 65,
              ),
            ),
          ],
          functions: [
            Node(
              kind: Function(
                sig: Node(
                  kind: FunctionSignature(
                    pub_: Some(Span(
                      start: 69,
                      end: 72,
                    )),
                    unsafe_: None,
                    name: Node(
                      kind: "foo",
                      span: Span(
                        start: 76,
                        end: 79,
                      ),
                    ),
                    generic_params: Node(
                      kind: [],
                      span: Span(
                        start: 76,
                        end: 79,
                      ),
                    ),
                    args: [
                      Node(
                        kind: Self_,
                        span: Span(
                          start: 80,
                          end: 84,
                        ),
                      ),
                    ],
                    return_type: Some(Node(
                      kind: Base(
                        base: "u8",
                      ),
                      span: Span(
                        start: 89,
                        end: 91,
                      ),
                    )),
                  ),
                  span: Span(
                    start: 69,
                    end: 91,
                  ),
                ),
                body: [
                  Node(
                    kind: Return(
                      value: Some(Node(
                        kind: BinOperation(
                          left: Node(
                            kind: Attribute(
                              value: Node(
                                kind: Name("self"),
                                span: Span(
                                  start: 105,
                                  end: 109,
                                ),
                              ),
                              attr: Node(
                                kind: "z",
                                span: Span(
                                  start: 110,
                                  end: 111,
                                ),
                              ),
                            ),
                            span: Span(
                              start: 105,
                              end: 111,
                            ),
                          ),
                          op: Node(
                            kind: Add,
                            span: Span(
                              start: 112,
                              end: 113,
                            ),
                          ),
                          right: Node(
                            kind: Attribute(
                              value: Node(
                                kind: Name("self"),
                                span: Span(
                                  start: 114,
                                  end: 118,
                                ),
                              ),
                              attr: Node(
                                kind: "y",
                                span: Span(
                                  start: 119,
                                  end: 120,
                                ),
                              ),
                            ),
                            span: Span(
                              start: 114,
                              end: 120,
                            ),
                          ),
                        ),
                        span: Span(
                          start: 105,
                          end: 120,
                        ),
                      )),
                    ),
                    span: Span(
                      start: 98,
                      end: 120,
                    ),
                  ),
                ],
              ),
              span: Span(
                start: 69,
                end: 124,
              ),
            ),
            Node(
              kind: Function(
                sig: Node(
                  kind: FunctionSignature(
                    pub_: None,
                    unsafe_: Some(Span(
                      start: 127,
                      end: 133,
                    )),
                    name: Node(
                      kind: "bar",
                      span: Span(
                        start: 137,
                        end: 140,
                      ),
                    ),
                    generic_params: Node(
                      kind: [],
                      span: Span(
                        start: 137,
                        end: 140,
                      ),
                    ),
                    args: [],
                    return_type: None,
                  ),
                  span: Span(
                    start: 127,
                    end: 142,
                  ),
                ),
                body: [],
              ),
              span: Span(
                start: 127,
                end: 145,
              ),
            ),
          ],
          pub_qual: None,
        ),
        span: Span(
          start: 0,
          end: 147,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 147,
  ),
)
