crates/parser/tests/cases/snapshots/cases__parse_ast__type_3d.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_3d), types::parse_type_desc,\n           \"Array<Array<Array<u256, 4>, 4>, 4>\")"

---
Node(
  kind: Generic(
    base: Node(
      kind: "Array",
      span: Span(
        start: 0,
        end: 5,
      ),
    ),
    args: Node(
      kind: [
        TypeDesc(Node(
          kind: Generic(
            base: Node(
              kind: "Array",
              span: Span(
                start: 6,
                end: 11,
              ),
            ),
            args: Node(
              kind: [
                TypeDesc(Node(
                  kind: Generic(
                    base: Node(
                      kind: "Array",
                      span: Span(
                        start: 12,
                        end: 17,
                      ),
                    ),
                    args: Node(
                      kind: [
                        TypeDesc(Node(
                          kind: Base(
                            base: "u256",
                          ),
                          span: Span(
                            start: 18,
                            end: 22,
                          ),
                        )),
                        Int(Node(
                          kind: 4,
                          span: Span(
                            start: 24,
                            end: 25,
                          ),
                        )),
                      ],
                      span: Span(
                        start: 17,
                        end: 26,
                      ),
                    ),
                  ),
                  span: Span(
                    start: 12,
                    end: 26,
                  ),
                )),
                Int(Node(
                  kind: 4,
                  span: Span(
                    start: 28,
                    end: 29,
                  ),
                )),
              ],
              span: Span(
                start: 11,
                end: 30,
              ),
            ),
          ),
          span: Span(
            start: 6,
            end: 30,
          ),
        )),
        Int(Node(
          kind: 4,
          span: Span(
            start: 32,
            end: 33,
          ),
        )),
      ],
      span: Span(
        start: 5,
        end: 34,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 34,
  ),
)
