crates/parser/tests/cases/snapshots/cases__parse_ast__type_map1.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_map1), types::parse_type_desc,\n           \"Map<address, u256>\")"

---
Node(
  kind: Generic(
    base: Node(
      kind: "Map",
      span: Span(
        start: 0,
        end: 3,
      ),
    ),
    args: Node(
      kind: [
        TypeDesc(Node(
          kind: Base(
            base: "address",
          ),
          span: Span(
            start: 4,
            end: 11,
          ),
        )),
        TypeDesc(Node(
          kind: Base(
            base: "u256",
          ),
          span: Span(
            start: 13,
            end: 17,
          ),
        )),
      ],
      span: Span(
        start: 3,
        end: 18,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 18,
  ),
)
