crates/parser/tests/cases/snapshots/cases__parse_ast__type_map2.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_map2), types::parse_type_desc,\n           \"Map<address, Map<u8, u256>>\")"

---
Node(
  kind: Generic(
    base: Node(
      kind: "Map",
      span: Span(
        start: 0,
        end: 3,
      ),
    ),
    args: Node(
      kind: [
        TypeDesc(Node(
          kind: Base(
            base: "address",
          ),
          span: Span(
            start: 4,
            end: 11,
          ),
        )),
        TypeDesc(Node(
          kind: Generic(
            base: Node(
              kind: "Map",
              span: Span(
                start: 13,
                end: 16,
              ),
            ),
            args: Node(
              kind: [
                TypeDesc(Node(
                  kind: Base(
                    base: "u8",
                  ),
                  span: Span(
                    start: 17,
                    end: 19,
                  ),
                )),
                TypeDesc(Node(
                  kind: Base(
                    base: "u256",
                  ),
                  span: Span(
                    start: 21,
                    end: 25,
                  ),
                )),
              ],
              span: Span(
                start: 16,
                end: 26,
              ),
            ),
          ),
          span: Span(
            start: 13,
            end: 26,
          ),
        )),
      ],
      span: Span(
        start: 3,
        end: 27,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 27,
  ),
)
