crates/parser/tests/cases/snapshots/cases__parse_ast__type_name.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_name), types::parse_type_desc, \"MyType\")"

---
Node(
  kind: Base(
    base: "MyType",
  ),
  span: Span(
    start: 0,
    end: 6,
  ),
)
